# shoot_em_up

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bootstrap.py  build_and_run.bat  compile_commands.json  env.bat  generate.bat  generate_compile_commands.py  justfile  shoot_em_up.rad
assets/shaders/: basic_2d.vert  depth_test.frag  grid.vert  imgui.frag  imgui.vert  mesh.vert  sprite.vert  texture_2d.frag  texture_2d.vert
data/shaders/: basic_2d.vert  basic_light.frag  grid.frag  phong.frag  single_color.frag  texture_2d.vert
include/math/: mat2.h  mat2.hpp  mat3.h  mat3.hpp  mat4.h  mat4.hpp  math.h  math.hpp  quat.h  quat.hpp  simd.hpp  transform.h  transform.hpp  util.hpp  vec2.h  vec2.hpp  vec3.h  vec3.hpp  vec4.h  vec4.hpp
include/platform/: assert.hpp  platform.h  platform.hpp  types.h  types.hpp  user_input.h  user_input.hpp
scripts/: build.bat  check_errors.bat  compile.bat  env.bat  generate_compile_commands.py  only_preprocess.bat  resample_wav.py  srgb_linear_lut_gen.py
shared_deps/glad/include/glad/: gl.h  vulkan.h
shared_deps/glad/src/: gl.c  vulkan.c
src/: CMakeLists.txt  asset_builder_main.cpp  win32_main.cpp  win32_main.hpp  win_main.cpp  win_main.hpp
src/core/: array.hpp  benchmarking.hpp  color.hpp  hash.hpp  lib.cpp  lib.hpp  list.hpp  logger.cpp  logger.h  logger.hpp  macros.hpp  memory.cpp  memory.h  memory.hpp  memory_arena.cpp  memory_arena.h  memory_arena.hpp  mesh.hpp  sort.hpp  span.hpp  stack_array.hpp  stack_list.hpp  string8.hpp  util.hpp
src/engine/: array.cpp  array.h  array.hpp  asset_builder.cpp  assets.cpp  assets.h  assets.hpp  audio.cpp  audio.hpp  camera.h  camera.hpp  debug.cpp  engine.cpp  engine.h  engine.hpp  fixed_string.h  framebuffer.h  framebuffer.hpp  gameplay.h  gameplay.hpp  globals.cpp  globals.hpp  growable_list.h  growable_string.h  gui.cpp  gui.hpp  hm_assert.h  hm_assert.hpp  hugin_file_formats.h  hugin_file_formats.hpp  linked_list.h  linked_list.hpp  linked_list_buffer.h  list.h  logger.cpp  logger.h  memory.cpp  memory.h  memory_arena.cpp  memory_arena.h  (+14 more)
src/engine/allocators/: pool_allocator.h  pool_allocator.hpp
src/engine/cli/: cli.cpp  cli.h  cli_app.h  echo.h  options.h
src/engine/gl/: gl.cpp  gl.h  gl_shader.cpp  gl_shader.h  gl_vao.cpp  gl_vao.h
src/engine/gui/: imgui.cpp  imgui.hpp
src/engine/renderer/: asset_manager.cpp  asset_manager.h
src/engine/structs/: swap_back_list.h  swap_back_list.hpp
src/math/: CMakeLists.txt  bounding_objects.hpp  mat2.cpp  mat3.cpp  mat4.cpp  quat.cpp  transform.cpp  trigonometry.h  trigonometry.hpp  unit.cpp  vec2.cpp  vec3.cpp
src/platform/: direct_write.hpp
src/renderers/: cpu_render_algorithms.hpp  opengl_renderer.cpp  renderer.cpp  renderer.h  renderer.hpp  win32_opengl_renderer.cpp  win32_opengl_renderer.h  win32_renderer.h  win32_renderer.hpp  win32_software_renderer.cpp
src/renderers/gl/: gl_shader.cpp  gl_shader.h  gl_shader.hpp  gl_vao.cpp  gl_vao.hpp
tests/: CMakeLists.txt  cli_echo_test.cpp  doctest.h  fixed_string_test.cpp  growable_list_test.cpp  growable_string_text.cpp  line_buffer_test.cpp  linked_list_test.cpp  memory_arena_test.cpp  test_main.cpp  test_mat2.cpp  test_mat3.cpp  test_mat4.cpp  test_render.cpp  test_render_line_bresenham.cpp  test_renderer.cpp  test_simd.cpp  test_sort.cpp  test_string8.cpp  util.h  util.hpp
tests/structs/: test_swap_back_list.cpp
